--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -25,30 +25,26 @@ layout: main
   </div>
 
   <div id="pouch-stack">
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
+    <div class="pouch-pouch"><div class="pouch"></div></div>
 
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-    <div class="pouch"></div>
-
-    <div id= "top-pouch" class="card">
+    <div id="top-pouch" class="pouch-pouch card">
       <div class="under-pouch-cover"></div>
       <div class="content">
         <div class="front pouch-cover"></div>
