--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -28,6 +28,7 @@
 
     <link rel="stylesheet" href="/css/global.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="{{ stylesheet | safe }}" type="text/css" media="screen" />
+    <link rel="shortcut icon" type="image/png" href="/images/comp-note.png"/>
     <script src="{{ script | safe }}" defer></script>
   </head>
 
