--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -45,10 +45,13 @@ layout: main
     <div class="pouch-pouch"><div class="pouch"></div></div>
 
     <div id="top-pouch" class="pouch-pouch card">
-      <div class="under-pouch-cover"></div>
+      <div class="under-pouch-cover shadowed">
+      </div>
       <div class="content">
-        <div class="front pouch-cover"></div>
-        <div class="back pouch-cover"></div>
+        <div class="front pouch-cover">
+        </div>
+        <div class="back">
+        </div>
       </div>
     </div>
   </div>
