--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -39,6 +39,7 @@
         <h2>software (&amp; non-software)<br>that loves paper</h2> 
       </div>
       <nav id="studio-nav">
+        <a href="/" class="mobile-only">home</a>
         <a href="/info" class="space-beneath">info</a>
         <a href="/zines">zines</a>
         <a href="/machines">machines</a>
