--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ title }}">
     <meta property="og:description" content="Pouch Studio: software (and non-software) that loves paper">
-    {# <meta property="og:image" content="https://pouch.cafe/images/og.png"> #}
+    <meta property="og:image" content="https://pouch.studio/images/og.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -20,7 +20,7 @@
     <meta property="twitter:url" content="https://pouch.studio">
     <meta name="twitter:title" content="{{ title }}">
     <meta name="twitter:description" content="Pouch Studio: software (and non-software) that loves paper">
-    {# <meta name="twitter:image" content="https://pouch.cafe/images/og.png"> #}
+    <meta name="twitter:image" content="https://pouch.studio/images/og.png">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
