--- a/css/global.css
+++ b/css/global.css
@@ -508,7 +508,7 @@ footer {
     background-color: rgb(241, 253, 255);
     border-top: 3px solid black;
     padding: 20px;
-    box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.25); */
   }
 
   #studio-nav .space-beneath, #studio-nav .space-above {
