--- a/css/global.css
+++ b/css/global.css
@@ -271,7 +271,7 @@ nav a, nav span {
 
 .pouch,
 .pouch-cover {
-  background-image: url(/images/cover.png);
+  background-image: url(/images/cover2.png);
   background-size: cover;
   width: 100%;
   aspect-ratio: 264 / 375;
