--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -44,9 +44,8 @@
         <a href="/zines">zines</a>
         <a href="/machines">machines</a>
         <a href="/tools">tools</a>
-        <a href="/crafts">crafts</a>
         <a href="/essays">essays?</a>
-        <a href="https://pouchcafe.gumroad.com/" class="space-above" target="_blank">shop</a>
+        <a href="https://payhip.com/PouchStudio" class="space-above" target="_blank">shop</a>
       </nav>
       {{ content | safe }}
       <footer></footer>
