--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -45,7 +45,7 @@
         <a href="/machines">machines</a>
         <a href="/tools">tools</a>
         <a href="/essays">essays?</a>
-        <a href="https://shop.pouchmagazine.com/PouchStudio" class="space-above" target="_blank">shop</a>
+        <a href="https://shop.pouchmagazine.com" class="space-above" target="_blank">shop</a>
       </nav>
       {{ content | safe }}
       <footer></footer>
